--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "dev": "deno run --watch main.ts"
+    "serve": "deno serve --env-file --allow-env --allow-read --allow-net=localhost:3306 --unstable-kv --watch main.ts"
   },
   "fmt": {
     "exclude": ["docs/"]
