--- a/deno.json
+++ b/deno.json
@@ -1,8 +1,5 @@
 {
-  "tasks": {
-    "serve": "deno serve --env-file --allow-env --allow-read --allow-net=localhost:3306 --unstable-kv --watch main.ts"
-  },
   "fmt": {
-    "exclude": ["docs/"]
+    "exclude": ["views/", "docs/"]
   }
 }
