--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -9,7 +9,6 @@ jobs:
     runs-on: ubuntu-latest
 
     permissions:
-      id-token: write
       contents: read
     
     steps:
@@ -34,11 +33,17 @@ jobs:
           path: docs/
 
   deploy:
+    name: Deploy Documentation
+    needs: build
+    runs-on: ubuntu-latest
+
+    permissions:
+      id-token: write
+
     environment:
       name: github-pages
       url: ${{ steps.deploy.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
+
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
