--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -43,7 +43,7 @@ jobs:
 
     environment:
       name: github-pages
-      url: ${{ steps.deploy.outputs.page_url }}
+      url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
       - name: Deploy to GitHub Pages
