Fix GitHub Actions LFS checkout

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,6 +15,11 @@ jobs:
       - name: Clone Repository
         id: clone
         uses: actions/checkout@v4
+        with:
+          lfs: true
+      
+      - name: Checkout LFS objects
+        run: git lfs checkout
 
       - name: Install Deno
         id: install
