--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -5,6 +5,7 @@ on:
 
 jobs:
   check:
+    name: Repository Checks
     runs-on: ubuntu-latest
 
     permissions:
@@ -17,4 +18,4 @@ jobs:
           deno-version: v2.x
       - run: deno fmt --check
       - run: deno lint
-      - run: deno test --allow-all
+      - run: deno test tests/unit
