--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,6 +21,7 @@ services:
 
   app:
     environment:
+      - ENVIRONMENT=production
       - DATABASE_HOSTNAME=mysql
       - DATABASE_USERNAME=${DATABASE_USERNAME}
       - DATABASE_NAME=${DATABASE_NAME}
